--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -81,3 +81,45 @@ footer {
   background-color: steelblue;
 }
 
+
+.crown-body {
+  position: relative;
+
+}
+
+.crown-1 {
+  position: absolute;
+  top: -2px;
+  left: 8px;
+ color: yellow;
+ font-size: 2.5em;
+}
+
+.crown-2 {
+  position: absolute;
+   top: -2px;
+  left: 220px;
+ color: lightsteelblue;
+ font-size: 2em;
+}
+
+
+.crown-3 {
+  position: absolute;
+   top: -2px;
+  left: 430px;
+ color: chocolate;
+ font-size: 2em;
+
+}
+
+.favo {
+  height: 20px;
+
+}
+
+.c{
+  height: 500px;
+  width :100%;
+}
+
