--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,40 +1,21 @@
+<h2 class="heading mt-3">Top</h2>
 
-  <div class="row">
+  <div class="row mt-3">
 
     <div class="col-md-1"></div>
 
 <div class="col-md-10">
-<h3 class="leftcolor-blue heading">トップページ</h3>
 
 
-<div class="carousel slide" id="sample" date-ride="carousel">
-  <ol class="carousel-indicators">
-    <li date-target="#sample" date-slide-to="0" class="active"></li>
-    <li date-target="#sample" date-slide-to="1"></li>
-    <li date-target="#sample" date-slide-to="2"></li>
-    <li date-target="#sample" date-slide-to="3"></li>
-  </ol>
-
-  <div class="carousel-inner">
-    <div class="carousel-item active"><img src="/assets/4771511_s.jpg"  class="d-block"></div>
-    <div class="carousel-item"><img src="/assets/22026459_s.jpg" alt="second slide"  class="d-block"></div>
-    <div class="carousel-item"><img src="/assets/4906649_s.jpg"  class="d-block"></div>
-    <div class="carousel-item"><img src="/assets/4906963_s.jpg"  class="d-block"></div>
-    <div class="carousel-item"><img src="/assets/5085364_s.jpg"  class="d-block"></div>
-    <div class="carousel-item"><img src="/assets/5043422_s.jpg"  class="d-block"></div>
-  </div>
-
- <a href="#sample" class="carousel-control-prev" role="buttton" date-slide="prev">
-   <span class="carousel-controll-prev-icon" aria-hidden="true"></span>
-   <span class="sr-only">前の画像へ</span>
- </a>
-  <a href="#sample" class="carousel-control-next" role="button" date-slide="next">
-   <span class="carousel-controll-next-icon" aria-hidden="true"></span>
-   <span class="sr-only">次の画像へ</span>
- </a>
+<div class="a">
+  <div class="b"><img class="c" src="/assets/5086926_s.jpg" ></div>
+    <div class="b"><img class="c" src="/assets/4771511_s.jpg" ></div>
+    <div class="b"><img class="c" src="/assets/22026459_s.jpg" ></div>
+    <div class="b"><img class="c" src="/assets/4906649_s.jpg" ></div>
+    <div class="b"><img class="c" src="/assets/5085364_s.jpg" ></div>
+    <div class="b"><img class="c" src="/assets/4906963_s.jpg" ></div>
 
 </div>
-
 
 </div>
 
