--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
  <script src="https://kit.fontawesome.com/fad7ba032c.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   </head>
 
   <body>
@@ -63,10 +66,15 @@
     </header>
 
    <div class="row">
-      <% if user_signed_in? %>
-    <div class="col-md-3 sidebar"><%= render 'homes/sidebar' %></div>
-     <% else %>
+       <% if controller.controller_name == "homes" %>
+        <% else %>
+        <% if user_signed_in? %>
+           <div class="col-md-3 sidebar"><%= render 'homes/sidebar' %></div>
+        <% else %>
+        <% end %>
       <% end %>
+
+
     <div class="col-md-9"><%= yield %></div>
     </div>
 
