--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -17,7 +17,7 @@
        <%= link_to style_path(style) do %>
          <%= attachment_image_tag style, :image, format: 'jpeg', size: "150x200", class: "mr-5" %>
        <% end %>
-         <div class="favorite-btn"><%= render partial: 'favorites/favorite', locals: { style: style } %></div>
+         <div class="favorite-btn" id="style_<%= style.id %>" ><%= render partial: 'favorites/favorite', locals: { style: style } %></div>
          <p><%= link_to "#{style.comments.count}コメント", style_path(style.id), class: "far fa-comment" %></p>
      </div>
        <% end %>
