--- a/app/views/styles/show.html.erb
+++ b/app/views/styles/show.html.erb
@@ -16,31 +16,11 @@
 
 
 
-<div class="favorite-btn"><%= render partial: 'favorites/favorite', locals: { style: @style } %></div>
-
-<div class="comments">
-  <p>コメント件数:<%= @style.comments.count %></p>
-  <% @style.comments.each do |comment| %>
-   <p>ユーザー画像</p>
-   <%= comment.user.name %>
-   <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.body %>
-
-  <% if comment.user == current_user %>
-  <div class="comment-delete">
-    <%= link_to "削除", style_comment_path(comment.style, comment), method: :delete %>
-  </div>
-  <% end %>
-
-   <% end %>
-</div>
+<div class="favorite-btn" id="style_<%= @style.id %>"><%= render partial: 'favorites/favorite', locals: { style: @style } %></div>
 
 
-<div class="new-comment">
- <%= form_with(model: [@style,@comment], local: true) do |f| %>
-   <%= f.text_area :body, rows:'5', placeholder: "コメントをここに" %>
-   <%= f.submit "送信する" %>
-  <% end %>
-</div>
+ <div class="comment-btn" id="comments_<%= @style.id %>"><%= render partial: 'comments/comment', locals: {style: @style, comment: @comment} %></div>
+
 
 
 
