--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,8 @@
 
     <% if @user == current_user  %>
 
-    <div class="col-md-5">
-      <%= attachment_image_tag @user, :image, format: 'png', size:"300x300" %>
+    <div class="col-md-5 profile">
+      <%= attachment_image_tag @user, :image, format: 'png', size: "300x300", class: "profile" %>
     </div>
 
     <div class="col-md-5 mt-3">
@@ -55,7 +55,7 @@
       </tr>
       </table>
 
-       <%= render partial: 'follow', locals: {user: @user} %>
+       <div class="follow-btn" id="user_<%= @user.id %>"> <%= render partial: 'relationships/follow', locals: {user: @user} %></div>
     </div>
 
      <% end %>
