--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,7 @@ body {
   position: relative;
   padding-bottom: 60px;
   box-sizing: border-box;
+  padding-right: 0;
 }
 
 header {
@@ -118,13 +119,103 @@ footer {
 
 }
 
-.c{
-  height: 500px;
-  width :100%;
-}
+
 
 
 .profile {
   border-radius: 50%;
 
 }
+
+
+.main-visual {
+  width: 100%;
+  height: 500px;
+  background-image: image-url("/images/2547333.jpg");
+ background-size: 1040px 650px;
+ background-position: right 40% top 50px;
+ background-repeat: no-repeat;
+}
+
+
+
+.about-closet {
+  width: 100%;
+  height: 500px;
+  background-color: lightgray;
+
+}
+
+
+.collection {
+  width: 100%;
+  height: 500px;
+  display: flex;
+   background-color: #EEE5DE;
+
+}
+
+.box-1{
+    width: 40%;
+  height: 500px;
+
+}
+
+.box-2{
+   width: 60%;
+  height: 500px;
+   background-image: image-url("/images/596922.jpg");
+   background-size: 750px 700px;
+   opacity: 0.7;
+   background-position: right 30% bottom 5px;
+background-blend-mode: lighten;
+
+}
+
+.cordinate {
+  width: 100%;
+  height: 500px;
+ background-color: lightgray;
+}
+
+.a{
+   background-color: lightgray;
+   background-blend-mode: lighten;
+   margin-top: 100px;
+   margin-left: 100px;
+}
+
+
+.c{
+  height: 300px;
+  width : 500px;
+}
+
+
+.check-user {
+  width: 100%;
+  height: 500px;
+  display: flex;
+}
+
+
+.box-3{
+   width: 50%;
+  height: 500px;
+
+
+}
+
+.box-4{
+   width: 50%;
+  height: 500px;
+  background-image: image-url("/images/2664806.jpg");
+  background-size: 600px 400px;
+  background-position: left 20% top 40%;
+  background-repeat: no-repeat;
+
+
+
+}
+
+
