--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,12 +1,28 @@
-<h2 class="heading mt-3">Top</h2>
 
-  <div class="row mt-3">
+<div class="main-visual">
 
-    <div class="col-md-1"></div>
-
-<div class="col-md-10">
+</div>
 
 
+
+
+
+
+<div class="about-closet">
+
+
+
+</div>
+
+<div class="collection">
+<div class="box-1"></div>
+<div class="box-2"></div>
+
+
+</div>
+
+
+<div class="cordinate">
 <div class="a">
   <div class="b"><img class="c" src="/assets/5086926_s.jpg" ></div>
     <div class="b"><img class="c" src="/assets/4771511_s.jpg" ></div>
@@ -19,5 +35,12 @@
 
 </div>
 
-<div class="col-md-1"></div>
+
+
+
+<div class="check-user">
+
+<div class="box-3"></div>
+<div class="box-4"></div>
+
 </div>
