--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,7 @@ header {
   background-color: steelblue;
   height: 70px;
   color: white;
+  width: 100%;
 }
 
 .logo {
@@ -128,13 +129,23 @@ footer {
 }
 
 
+
 .main-visual {
   width: 100%;
-  height: 500px;
+  height: 600px;
   background-image: image-url("/images/2547333.jpg");
- background-size: 1040px 650px;
- background-position: right 40% top 50px;
+ background-size: 1050px 730px;
+ opacity: 0.7;
+ background-position: right 40% top 25px;
  background-repeat: no-repeat;
+}
+
+.main-visual h1 {
+    text-align: center;
+    color: black;
+    font-size: 100px;
+    margin-top: 150px;
+  font-weight: bold;
 }
 
 
@@ -143,8 +154,61 @@ footer {
   width: 100%;
   height: 500px;
   background-color: lightgray;
+  text-align: center;
+}
+
+.about-closet h2 {
+    font-size: 50px;
+    margin-top: 50px;
 
 }
+
+.about-closet span {
+    font-weight: bold;
+    background: linear-gradient(transparent 70%, orange 70%);
+}
+
+
+
+.about-content{
+    display: flex;
+    justify-content: center;
+    margin-top: 70px;
+    color: white;
+}
+
+.about-content i {
+    font-size: 80px;
+}
+
+.about-box {
+    width: 260px;
+    height: 260px;
+    background-color: orange;
+    border-radius: 50%;
+     padding-top: 50px;
+     text-align: center;
+}
+
+.about-box h3 {
+    margin-top: 20px;
+    font-size: 25px;
+    text-align: left;
+    margin-left: 20px;
+}
+
+.about-item1 {
+    margin-right: 50px;
+}
+
+.about-item1 h3 {
+    margin-left: 5px;
+}
+
+.about-item3 {
+    margin-left: 50px;
+}
+
 
 
 .collection {
@@ -152,7 +216,6 @@ footer {
   height: 500px;
   display: flex;
    background-color: #EEE5DE;
-
 }
 
 .box-1{
@@ -165,9 +228,10 @@ footer {
    width: 60%;
   height: 500px;
    background-image: image-url("/images/596922.jpg");
-   background-size: 750px 700px;
+   background-size: 600px 550px;
+ background-repeat: no-repeat;
    opacity: 0.7;
-   background-position: right 30% bottom 5px;
+   background-position: right 30% bottom 17px;
 background-blend-mode: lighten;
 
 }
@@ -210,7 +274,7 @@ background-blend-mode: lighten;
    width: 50%;
   height: 500px;
   background-image: image-url("/images/2664806.jpg");
-  background-size: 600px 400px;
+  background-size: 540px 360px;
   background-position: left 20% top 40%;
   background-repeat: no-repeat;
 
