--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,6 @@
 
 <div class="main-visual">
+<h1> Welcome to Your Closet</h1>
 
 </div>
 
@@ -9,6 +10,28 @@
 
 
 <div class="about-closet">
+<h2>What about <span>"Your Closet"?</span></h2>
+  <div class="about-content">
+
+
+  <div class="about-box about-item1">
+    <i class="fas fa-shopping-bag"></i>
+  <h3>ファッションアイテムの整理・管理</h3>
+  </div>
+
+  <div class="about-box about-item2">
+    <i class="fas fa-tshirt"></i>
+<h3>毎日のコーデの参考</h3>
+
+    </div>
+
+  <div class="about-box about-item3">
+    <i class="fas fa-child"></i>
+    <h3>ユーザーやコーデをお気に入り登録</h3>
+
+    </div>
+  </div>
+
 
 
 
