--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -152,14 +152,14 @@ footer {
 
 .about-closet {
   width: 100%;
-  height: 500px;
+  height: 700px;
   background-color: lightgray;
   text-align: center;
 }
 
 .about-closet h2 {
     font-size: 50px;
-    margin-top: 50px;
+    margin-top: 100px;
 
 }
 
@@ -173,7 +173,7 @@ footer {
 .about-content{
     display: flex;
     justify-content: center;
-    margin-top: 70px;
+    margin-top: 130px;
     color: white;
 }
 
@@ -213,73 +213,148 @@ footer {
 
 .collection {
   width: 100%;
-  height: 500px;
+  height: 550px;
   display: flex;
    background-color: #EEE5DE;
 }
 
 .box-1{
     width: 40%;
-  height: 500px;
-
+  height: 550px;
+  margin-top: 150px;
+  padding-left: 100px;
 }
+
+.box-1 h3 {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.box-1 h6 {
+  font-size: 20px;
+margin-top: 50px;
+}
+
+
 
 .box-2{
    width: 60%;
-  height: 500px;
+  height: 550px;
    background-image: image-url("/images/596922.jpg");
    background-size: 600px 550px;
  background-repeat: no-repeat;
    opacity: 0.7;
-   background-position: right 30% bottom 17px;
+   background-position: right 30px bottom 70px;
 background-blend-mode: lighten;
 
 }
 
 .cordinate {
   width: 100%;
-  height: 500px;
+  height: 700px;
  background-color: lightgray;
+   display: flex;
+}
+
+.cordinate h3 {
+
+  margin-top: 200px;
+}
+
+
+.cordinate-system {
+  width: 500px;
+  height: 700px;
+  margin-top: 50px;
+  padding-left: 100px;
+
+}
+
+.cordinate-system h3 {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.cordinate-system h6 {
+  font-size: 20px;
+margin-top: 50px;
 }
 
 .a{
+    width: 600px;
    background-color: lightgray;
    background-blend-mode: lighten;
-   margin-top: 100px;
+   margin-top: 150px;
    margin-left: 100px;
 }
 
 
 .c{
-  height: 300px;
-  width : 500px;
+  height: 360px;
+  width : 600px;
 }
-
 
 .check-user {
   width: 100%;
-  height: 500px;
+  height: 700px;
   display: flex;
 }
 
-
 .box-3{
    width: 50%;
-  height: 500px;
-
-
+  height: 700px;
+   margin-top: 150px;
+  padding-left: 100px;
 }
+
+.box-3 h3 {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.box-3 h6 {
+  font-size: 20px;
+margin-top: 50px;
+}
+
 
 .box-4{
    width: 50%;
-  height: 500px;
+  height: 700px;
   background-image: image-url("/images/2664806.jpg");
   background-size: 540px 360px;
   background-position: left 20% top 40%;
   background-repeat: no-repeat;
+}
 
 
+.under {
+  width: 100%;
+  height: 350px;
+  display: flex;
+    background-color: #EEE5DE;
+}
 
+.under-box1 {
+   width: 50%;
+   margin-left: 300px;
+   margin-top: 70px;
+  height: 350px;
+  background-image: image-url("/images/dr036.png");
+  background-repeat: no-repeat;
+  background-size: 250px 250px;
+
+}
+
+.under-box2 {
+   width: 50%;
+  height: 350px;
+  margin-right: 200px;
+
+}
+
+.under-box2 h1 {
+  margin-top: 70px;
 }
 
 
