--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -38,7 +38,11 @@
 </div>
 
 <div class="collection">
-<div class="box-1"></div>
+<div class="box-1">
+  <h3>いつでも、どこでも、<br>手元にクローゼットを</h3>
+  <h6>新しい服を買ったら、似たようなものをすでに持ってた！なんてことは無くなります</h6>
+
+</div>
 <div class="box-2"></div>
 
 
@@ -51,10 +55,14 @@
     <div class="b"><img class="c" src="/assets/4771511_s.jpg" ></div>
     <div class="b"><img class="c" src="/assets/22026459_s.jpg" ></div>
     <div class="b"><img class="c" src="/assets/4906649_s.jpg" ></div>
-    <div class="b"><img class="c" src="/assets/5085364_s.jpg" ></div>
-    <div class="b"><img class="c" src="/assets/4906963_s.jpg" ></div>
-
+    <div class="b"><img class="c" src="/assets/5085364_s.jpg"></div>
+    <div class="b"><img class="c" src="/assets/4906963_s.jpg"></div>
 </div>
+<div class="cordinate-system">
+<h3>日々のコーディネートのヒントに</h3>
+<h6>たくさんの着こなしの中からあなたにあったスタイルを見つけよう！</h6>
+</div>
+
 
 </div>
 
@@ -63,7 +71,21 @@
 
 <div class="check-user">
 
-<div class="box-3"></div>
+<div class="box-3">
+  <h3>お気に入りのコーデ、ユーザーをいつでもチェック</h3>
+  <h6>いいねしたコーディネートをまとめて閲覧、また、お気に入りのユーザーはフォローして最新コーデをチェック！</h6>
+
+</div>
 <div class="box-4"></div>
+
+</div>
+
+<div class="under">
+  <div class="under-box1"></div>
+   <div class="under-box2">
+     <h1>Your Closet</h1>
+     <h6>おしゃれをもっとすぐそばに</h6>
+
+   </div>
 
 </div>
