--- a/app/views/styles/show.html.erb
+++ b/app/views/styles/show.html.erb
@@ -14,6 +14,12 @@
 
 <div style="display:block"><h5><%= @style.detail %></h5></div>
 
+<div>
+             <%= link_to user_path(@style.user) do %>
+            <%= attachment_image_tag(@style.user, :image, :fill, 100, 100, fallback: "no-image-icon.jpg") %><br>
+            <%= @style.user.name %>
+            <% end %>
+</div>
 
 
 <div class="favorite-btn" id="style_<%= @style.id %>"><%= render partial: 'favorites/favorite', locals: { style: @style } %></div>
