--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -321,7 +321,7 @@ margin-top: 50px;
 .box-4{
    width: 50%;
   height: 700px;
-  background-image: image-url("/images/2664806.jpg");
+  background-image: image-url("2664806.jpg");
   background-size: 540px 360px;
   background-position: left 20% top 40%;
   background-repeat: no-repeat;
