--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -48,15 +48,14 @@
 
 </div>
 
-
 <div class="cordinate">
 <div class="a">
-  <div class="b"><img class="c" src="/assets/5086926_s.jpg" ></div>
-    <div class="b"><img class="c" src="/assets/4771511_s.jpg" ></div>
-    <div class="b"><img class="c" src="/assets/22026459_s.jpg" ></div>
-    <div class="b"><img class="c" src="/assets/4906649_s.jpg" ></div>
-    <div class="b"><img class="c" src="/assets/5085364_s.jpg"></div>
-    <div class="b"><img class="c" src="/assets/4906963_s.jpg"></div>
+  <div class="b"><img class="c" src="<%= asset_path "5086926_s.jpg" %>" /></div>
+    <div class="b"><img class="c" src="<%= asset_path"4771511_s.jpg" %>" /></div>
+    <div class="b"><img class="c" src="<%= asset_path"22026459_s.jpg" %>" /></div>
+    <div class="b"><img class="c" src="<%= asset_path"4906649_s.jpg" %>" /></div>
+    <div class="b"><img class="c" src="<%= asset_path"5085364_s.jpg" %>" /></div>
+    <div class="b"><img class="c" src="<%= asset_path"4906963_s.jpg" %>" /></div>
 </div>
 <div class="cordinate-system">
 <h3>日々のコーディネートのヒントに</h3>
