--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -133,7 +133,7 @@ footer {
 .main-visual {
   width: 100%;
   height: 600px;
-  background-image: image-url("/images/2547333.jpg");
+  background-image: image-url("2547333.jpg");
  background-size: 1050px 730px;
  opacity: 0.7;
  background-position: right 40% top 25px;
@@ -240,7 +240,7 @@ margin-top: 50px;
 .box-2{
    width: 60%;
   height: 550px;
-   background-image: image-url("/images/596922.jpg");
+   background-image: image-url("596922.jpg");
    background-size: 600px 550px;
  background-repeat: no-repeat;
    opacity: 0.7;
@@ -340,7 +340,7 @@ margin-top: 50px;
    margin-left: 300px;
    margin-top: 70px;
   height: 350px;
-  background-image: image-url("/images/dr036.png");
+  background-image: image-url("dr036.png");
   background-repeat: no-repeat;
   background-size: 250px 250px;
 
