--- a/app/views/styles/show.html.erb
+++ b/app/views/styles/show.html.erb
@@ -1,44 +1,32 @@
 <h2 class="heading mt-3">スタイル詳細</h2>
 
-
 <div class="row mt-5">
-<div class="col-md-1"></div>
-<div class="col-md-5">
-<%= attachment_image_tag @style, :image, format: 'jpeg', size: "330x440" %>
-</div>
 
+    <div class="col-md-1"></div>
 
-<div class="col-md-5 mt-5">
+    <div class="col-md-5">
+        <%= attachment_image_tag @style, :image, format: 'jpeg', size: "330x440" %>
+    </div>
 
-<div style="display:block"><h4><%= @style.name %></h4></div>
-
-<div style="display:block"><h5><%= @style.detail %></h5></div>
-
-<div>
-             <%= link_to user_path(@style.user) do %>
-            <%= attachment_image_tag(@style.user, :image, :fill, 100, 100, fallback: "no-image-icon.jpg") %><br>
-            <%= @style.user.name %>
+    <div class="col-md-5 mt-5">
+        <div style="display:block"><h4><%= @style.name %></h4></div>
+        <div style="display:block"><h5><%= @style.detail %></h5></div>
+        <div>
+            <%= link_to user_path(@style.user) do %>
+                <%= attachment_image_tag(@style.user, :image, :fill, 100, 100, fallback: "no-image-icon.jpg") %><br>
+                <%= @style.user.name %>
             <% end %>
-</div>
+        </div>
+        <div class="favorite-btn" id="style_<%= @style.id %>"><%= render partial: 'favorites/favorite', locals: { style: @style } %></div>
+        <div class="comment-btn" id="comments_<%= @style.id %>"><%= render partial: 'comments/comment', locals: {style: @style, comment: @comment} %></div>
+        <% if @style.user_id == current_user.id  %>
+            <%= link_to "Edit", edit_style_path(@style.id), class: "btn  btn-outline-secondary" %>
+            <%= link_to "Delete", style_path(@style.id), method: :delete, class: "btn  btn-outline-secondary"  %>
+        <% else %>
+        <% end %>
+    </div>
 
-
-<div class="favorite-btn" id="style_<%= @style.id %>"><%= render partial: 'favorites/favorite', locals: { style: @style } %></div>
-
-
- <div class="comment-btn" id="comments_<%= @style.id %>"><%= render partial: 'comments/comment', locals: {style: @style, comment: @comment} %></div>
-
-
-
-
-<% if @style.user_id == current_user.id  %>
-<%= link_to "編集", edit_style_path(@style.id), class: "btn  btn-outline-secondary" %>
-<%= link_to "削除", style_path(@style.id), method: :delete, class: "btn  btn-outline-secondary"  %>
-<% else %>
-<% end %>
-
-</div>
-
-<div class="col-md-1"></div>
+    <div class="col-md-1"></div>
 
 </div>
 
