--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -324,3 +324,5 @@ footer {
 .under-box2 h1 {
   margin-top: 70px;
 }
+
+	http://176.34.4.252/assets/2664806-1b87ffe88029567…0d854d7f7db27ecab5b995ce75d23b0ed50e962ca71bd.jpg
