--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -145,7 +145,7 @@ footer {
     margin-top: 100px;
 }
 
-.about-closet span {
+ .about-closet  span {
     font-weight: bold;
     background: linear-gradient(transparent 70%, orange 70%);
 }
@@ -323,5 +323,203 @@ footer {
 
 .under-box2 h1 {
   margin-top: 70px;
+}
+
+
+@media screen and (max-width:425px) {
+
+.navbar-nav {
+  display: block;
+}
+
+.about-closet {
+  height: 1300px;
+}
+
+.ac-title {
+  text-align: center;
+  display: inline-block;
+}
+
+.about-closet span {
+    font-size: 50px;
+    margin-top: 100px;
+    display: inline-block;
+    margin-top: 10px;
+}
+
+.about-closet .ac-text2 {
+    font-weight: bold;
+    background: linear-gradient(transparent 70%, orange 70%);
+     display: inline-block;
+}
+
+
+.about-content {
+  display: block;
+  margin-top: 100px;
+}
+
+.about-box{
+  margin: 0 auto;
+}
+
+.about-item1 {
+  margin-top: 50px;
+}
+
+.about-item2 {
+  margin-top: 50px;
+}
+
+.about-item3 {
+  margin-top: 50px;
+}
+
+.collection {
+  width: 100%;
+  height: 700px;
+  flex-direction: column;
+  background-color: #EEE5DE;
+}
+
+.box-1{
+  width: 100%;
+  height: 350px;
+  margin-top: 50px;
+  padding-left: 50px;
+  order: 2;
+}
+
+.box-1 h3 {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.box-1 h6 {
+ font-size: 20px;
+ margin-top: 50px;
+ margin-right: 10px
+}
+
+.box-2{
+ width: 100%;
+ height: 350px;
+ background-image: image-url("596922.jpg");
+ background-size: contain;
+ background-repeat: no-repeat;
+ opacity: 0.7;
+ background-position: right 10px bottom 80px;
+ background-blend-mode: lighten;
+ order: 1;
+}
+
+.cordinate {
+  width: 100%;
+  height: 700px;
+  background-color: lightgray;
+ flex-direction: column;
+}
+
+.cordinate h3 {
+  margin-top: 0px;
+}
+
+.cordinate-system {
+  width: 100%;
+  height: 300px;
+  margin-top: 50px;
+  padding-left: 50px;
+}
+
+.cordinate-system h3 {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.cordinate-system h6 {
+  font-size: 20px;
+   margin-right: 10px
+}
+
+.a{
+   width: 100%;
+   background-color: lightgray;
+   background-blend-mode: lighten;
+   margin-top: 0px;
+   margin-left: 0px;
+}
+
+
+.c{
+  height: 360px;
+  width : 100%;
+}
+
+.check-user {
+  width: 100%;
+  height: 1000px;
+  flex-direction: column;
+}
+
+.box-3{
+  width: 100%;
+  height: 500px;
+  margin-top: 50px;
+  padding-left: 50px;
+   order: 2;
+
+}
+
+.box-3 h3 {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.box-3 h6 {
+  font-size: 20px;
+  margin-top: 50px;
+  margin-right: 10px
+}
+
+.box-4{
+  width: 100%;
+  height: 500px;
+  background-image: image-url("2664806.jpg");
+  background-size: contain;
+  background-position: left 20% top 40%;
+  background-repeat: no-repeat;
+   order: 1;
+}
+
+.under {
+  width: 100%;
+  height: 500px;
+  display: flex;
+   flex-direction: column;
+  background-color: #EEE5DE;
+}
+
+.under-box1 {
+   width: 100%;
+   margin: 0 auto;
+   height: 250px;
+   background-image: image-url("dr036.png");
+   background-repeat: no-repeat;
+   background-size: 250px 250px;
+
+}
+
+.under-box2 {
+  width: 100%;
+  height: 250px;
+  margin: 0 auto;
+}
+
+.under-box2 h1 {
+  margin-top: 0px;
+}
+
+
 }
 
