--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,7 +4,7 @@
 
 
 <div class="about-closet">
-  <h2>What about <span>"Your Closet"?</span></h2>
+  <h2 class="ac-title">What about<span class="ac-text">"Your Closet"?</span></h2>
   <div class="about-content">
     <div class="about-box about-item1">
       <i class="fas fa-shopping-bag"></i>
@@ -55,7 +55,7 @@
 
 <div class="check-user">
   <div class="box-3">
-    <h3>お気に入りのコーデ、ユーザーをいつでもチェック</h3>
+    <h3>お気に入りのコーデ、<br>ユーザーをいつでもチェック</h3>
     <h6>いいねしたコーディネートをまとめて閲覧、また、お気に入りのユーザーはフォローして最新コーデをチェック！</h6>
   </div>
 
