--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,12 +35,14 @@
         <% else %>
           <div class="title col-md-7 mt-2"><%= link_to "Your Closet", root_path, class: "logo" %></div>
           <div class="col-md-5 mt-3">
+            <div class="searchbar">
             <% if user_signed_in? %>
               <div class="d-flex">
                 <%= select_tag 'range', options_for_select([['---選択してください---', ''], ['Item', '1'],['Style','2']])  %>
                 <%= select_tag 'search', options_for_select([["前方一致", "forward_match"], ["後方一致", "backward_match"],["完全一致","perfect_match"],["部分一致","partial_match"]])  %>
                 <%= text_field_tag (:word) %>
                 <%= submit_tag "検索" %>
+              </div>
               </div>
             <% else %>
               <nav class="navbar navbar-light  justify-content-end">
@@ -68,7 +70,7 @@
     <% else %>
       <% if user_signed_in? %>
         <div class="col-md-3 sidebar"><%= render 'homes/sidebar' %></div>
-        <div class="col-md-9"><%= yield %></div>
+        <div class="col-md-9 contents"><%= yield %></div>
       <% else %>
         <div class="col-md-3"></div>
         <div class="col-md-9"><%= yield %></div>
