--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,41 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+
+.style-images {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+    margin-left: 30px;
+    margin-top: 50px;
+  width: 950px;
+}
+
+.pagenate {
+ margin-top: 50px;
+ margin-left: 400px;
+}
+
+
+
+
+@media screen and (max-width:425px) {
+
+  .style-images {
+    margin-left: 0;
+  }
+
+  .user-style {
+    margin-right: 0;
+  }
+
+.pagenate {
+ margin-top: 50px;
+ margin-left: 200px;
+}
+
+
+}
