--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,16 +1,29 @@
 <div class="comments">
   <p>コメント件数:<%= style.comments.count %></p>
-  <% style.comments.each do |comment| %>
-   <%= comment.user.name %>
-   <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.body %>
+
+  <table class="table">
+  <% style.comments.each do |comment|  %>
+  <tr>
+   <td><%= comment.user.name %></td>
+  <td> <%= comment.created_at.strftime('%Y/%m/%d') %></td>
+<td>   <%= comment.body %></td>
+
+
 
    <% if comment.user == current_user %>
+    <td>
     <div class="comment-delete">
      <%= link_to "削除", style_comment_path(comment.style, comment), remote: true, method: :delete %>
     </div>
+    </td>
    <% end %>
+   </tr>
 
   <% end %>
+
+  </table>
+
+
 </div>
 
 
