--- a/app/views/styles/show.html.erb
+++ b/app/views/styles/show.html.erb
@@ -1,6 +1,6 @@
 <h2 class="heading mt-3">スタイル詳細</h2>
 
-<div class="row mt-5">
+<div class="row mt-5 style-detail">
 
     <div class="col-md-1"></div>
 
@@ -8,19 +8,20 @@
         <%= attachment_image_tag @style, :image, format: 'jpeg', size: "330x440" %>
     </div>
 
-    <div class="col-md-5 mt-5">
-        <div style="display:block"><h4><%= @style.name %></h4></div>
+    <div class="col-md-5">
+        <div class="style-name"><h4><%= @style.name %></h4></div>
         <div style="display:block"><h5><%= @style.detail %></h5></div>
+         <div class="favorite-btn" id="style_<%= @style.id %>"><%= render partial: 'favorites/favorite', locals: { style: @style } %></div>
         <div>
             <%= link_to user_path(@style.user) do %>
-                <%= attachment_image_tag(@style.user, :image, :fill, 100, 100) %><br>
-                <%= @style.user.name %>
+                <%= attachment_image_tag(@style.user, :image, :fill, 100, 100) %>
+             <%= @style.user.name %>
             <% end %>
             <% @style.tags.each do |tag| %>
   　            <span class="btn btn-info"><%= tag.name %></span>
             <% end %>
         </div>
-        <div class="favorite-btn" id="style_<%= @style.id %>"><%= render partial: 'favorites/favorite', locals: { style: @style } %></div>
+
         <div class="comment-btn" id="comments_<%= @style.id %>"><%= render partial: 'comments/comment', locals: {style: @style, comment: @comment} %></div>
         <% if @style.user_id == current_user.id  %>
             <%= link_to "Edit", edit_style_path(@style.id), class: "btn  btn-outline-secondary" %>
@@ -32,4 +33,6 @@
     <div class="col-md-1"></div>
 
 </div>
+
+
 
