--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 
 <h2 class="heading mt-3">Profile</h2>
 
-  <div class="row ">
+  <div class="row profile-page ">
 
     <div class="col-md-1"></div>
 
@@ -60,18 +60,24 @@
 
      <% end %>
 
-<div class="d-flex flex-wrap justify-content-between ml-5 mt-5">
+<div class="style-images">
 <% @styles.each do |style| %>
 
 <div>
 <%= link_to style_path(style) do %>
-<%= attachment_image_tag style, :image, format: 'jpeg', size: "150x200", class: "mr-5" %>
+<%= attachment_image_tag style, :image, format: 'jpeg', size: "150x200", class: "mr-5 user-style" %>
 <% end %>
 </div>
 
 <% end %>
+
 </div>
+
+
+
 
     <div class="col-md-1"></div>
 
   </div>
+
+<div class="pagenate"><%= paginate @styles %></div>
