--- a/app/views/users/comments.html.erb
+++ b/app/views/users/comments.html.erb
@@ -8,7 +8,7 @@
     <% @comment_styles.each do |style| %>
      <div>
       <%= link_to style_path(style) do %>
-         <%= attachment_image_tag style, :image, format: 'jpeg', size:"200x200" %>
+         <%= attachment_image_tag style, :image, format: 'jpeg', size: "150x200", class: "mr-5"%>
       <% end %>
       <p><%= link_to "#{style.comments.count}コメント", style_path(style.id)  %></p>
       <div class="favorite-btn"><%= render partial: 'favorites/favorite', locals: { style: style } %></div>
@@ -19,3 +19,5 @@
   <div class="col-md-1"></div>
 
 </div>
+
+<div class="pagenate"><%= paginate @comment_styles %></div>
