--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -22,7 +22,7 @@
        </div>
       <% end %>
 
-      <div class="mt-5"><%= paginate @all_ranks %></div>
+      <div class="mt-5 profile-pagenate"><%= paginate @all_ranks %></div>
 
     </div>
 
