--- a/app/views/users/comments.html.erb
+++ b/app/views/users/comments.html.erb
@@ -20,4 +20,4 @@
 
 </div>
 
-<div class="pagenate"><%= paginate @comment_styles %></div>
+<div class="pagenate profile-pagenate"><%= paginate @comment_styles %></div>
