--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -18,4 +18,4 @@
   <div class="col-md-1"></div>
 </div>
 
-<div class="pagenate"><%= paginate @like_styles %></div>
+<div class="pagenate profile-pagenate"><%= paginate @like_styles %></div>
