--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.comments-number {
+  display: inline-block;
+
+}
+
+.comments-pagenate {
+   display: inline-block;
+   margin-left: 0;
+}
+
+.pagenate {
+      margin-left: 100px;
+}
