--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -383,7 +383,7 @@ background-size: contain;
   height: 500px;
   margin-top: 50px;
   padding-left: 50px;
-   order: 2;
+  order: 2;
 
 }
 
@@ -410,7 +410,7 @@ background-size: contain;
 
 .under {
   width: 100%;
-  height: 400px;
+  margin-bottom: 30px;
   display: flex;
    flex-direction: column;
   background-color: #EEE5DE;
