--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -79,5 +79,4 @@
     <div class="col-md-1"></div>
 
   </div>
-
-<div class="pagenate"><%= paginate @styles %></div>
+<div class="pagenate profile-pagenate"><%= paginate @styles %></div>
