--- a/app/views/relationships/followers.html.erb
+++ b/app/views/relationships/followers.html.erb
@@ -1,10 +1,10 @@
-<div class="container">
-  <div class="row">
+ <h2 class="heading mt-3">Follower</h2>
+
+  <div class="row mt-5">
 
     <div class="col-md-1"></div>
 
     <div class="col-md-10">
-      <h3 class="heading">フォロワー</h3>
       <table class='table table-hover table-inverse'>
         <thead>
           <tr>
@@ -30,7 +30,10 @@
       </table>
     </div>
 
+
+
+
     <div class="col-md-1"></div>
 
- </div>
-</div>
+
+  </div>
