--- a/app/views/relationships/followings.html.erb
+++ b/app/views/relationships/followings.html.erb
@@ -1,10 +1,10 @@
-<div class="container">
-  <div class="row">
+ <h2 class="heading mt-3">Following</h2>
+
+  <div class="row mt-5">
 
     <div class="col-md-1"></div>
 
     <div class="col-md-10">
-      <h3 class="heading">フォロー中</h3>
       <table class='table table-hover table-inverse'>
         <thead>
           <tr>
@@ -32,5 +32,5 @@
 
     <div class="col-md-1"></div>
 
+
   </div>
-</div>
