--- a/app/views/homes/_sidebar.html.erb
+++ b/app/views/homes/_sidebar.html.erb
@@ -13,8 +13,8 @@
   <table class="table">
     <tr><td><%= link_to 'マイページ', user_path(current_user.id), class: "fas fa-user text-light h6" %><td></tr>
     <tr><td> <%= link_to "ログアウト", destroy_user_session_path, class: "fas fa-sign-out-alt  text-light h6", method: :delete %></td></tr>
-    <tr><td><%= link_to 'いいねしたコーディネート', user_likes_path(current_user.id), class: "fas fa-heart  text-light h6" %></td></tr>
-    <tr><td><%= link_to 'コメントしたコーディネート', user_comments_path(current_user.id), class: "fas fa-comment  text-light h6" %></td></tr>
+    <tr><td><%= link_to 'いいねしたコーディネート', likes_user_path(current_user.id), class: "fas fa-heart  text-light h6" %></td></tr>
+    <tr><td><%= link_to 'コメントしたコーディネート', comments_user_path(current_user.id), class: "fas fa-comment  text-light h6" %></td></tr>
   </table>
 </div>
 
