--- a/app/views/styles/search.html.erb
+++ b/app/views/styles/search.html.erb
@@ -20,7 +20,7 @@
        <tr>
         <td>
           <%= link_to style_path(style) do %>
-           <%= attachment_image_tag style, :image, format: 'jpeg', size: "105x140", class: "mr-5" %>
+           <%= attachment_image_tag style, :image, format: 'jpeg', width: "105", class: "mr-5" %>
          <% end %>
         </td>
         <td>
